--- a/ZalandoShop/ZalandoShop.Shared/project.json
+++ b/ZalandoShop/ZalandoShop.Shared/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "metroioc": "2.0.5",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
   },
   "frameworks": {
