--- a/ZalandoShop/ZalandoShop/project.json
+++ b/ZalandoShop/ZalandoShop/project.json
@@ -1,6 +1,10 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.Toolkit.Uwp": "1.3.0",
+    "Microsoft.Toolkit.Uwp.UI": "1.3.0",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.0",
+    "MvvmLight": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
