--- a/ZalandoShop/ZalandoShop.Shared/ZalandoShop.Shared.csproj
+++ b/ZalandoShop/ZalandoShop.Shared/ZalandoShop.Shared.csproj
@@ -107,6 +107,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums.cs" />
+    <Compile Include="InstanceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\ZalandoShop.Shared.rd.xml" />
   </ItemGroup>
