--- a/ZalandoShop/ZalandoShop.ViewModel/ZalandoShop.ViewModel.csproj
+++ b/ZalandoShop/ZalandoShop.ViewModel/ZalandoShop.ViewModel.csproj
@@ -108,7 +108,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchResultsViewModel.cs" />
+    <Compile Include="SearchZalandoViewModel.cs" />
     <EmbeddedResource Include="Properties\ZalandoShop.ViewModel.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ZalandoShop.Contracts\ZalandoShop.Contracts.csproj">
+      <Project>{979695BE-F7FB-4DBB-9796-22F8B3C1EAFA}</Project>
+      <Name>ZalandoShop.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ZalandoShop.Model\ZalandoShop.Model.csproj">
+      <Project>{433A9DBB-B333-4884-877A-5F6DA4805E72}</Project>
+      <Name>ZalandoShop.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ZalandoShop.Shared\ZalandoShop.Shared.csproj">
+      <Project>{F462085B-59AB-49E0-9E1D-94F1BF1D793C}</Project>
+      <Name>ZalandoShop.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
