--- a/ZalandoShop/ZalandoShop.Shared/ZalandoShop.Shared.csproj
+++ b/ZalandoShop/ZalandoShop.Shared/ZalandoShop.Shared.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="InstanceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageHelper.cs" />
     <EmbeddedResource Include="Properties\ZalandoShop.Shared.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
