--- a/ZalandoShop/ZalandoShop/ZalandoShop.csproj
+++ b/ZalandoShop/ZalandoShop/ZalandoShop.csproj
@@ -150,6 +150,10 @@
       <Project>{433A9DBB-B333-4884-877A-5F6DA4805E72}</Project>
       <Name>ZalandoShop.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ZalandoShop.Services\ZalandoShop.Services.csproj">
+      <Project>{334F47C8-5DFC-4878-9618-DFE94014C824}</Project>
+      <Name>ZalandoShop.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ZalandoShop.Shared\ZalandoShop.Shared.csproj">
       <Project>{F462085B-59AB-49E0-9E1D-94F1BF1D793C}</Project>
       <Name>ZalandoShop.Shared</Name>
