--- a/ZalandoShop/ZalandoShop.Tests/ZalandoShop.Tests.csproj
+++ b/ZalandoShop/ZalandoShop.Tests/ZalandoShop.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Fake\FakeZalandoDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
